[package]
name = "sps30-i2c"
version = "0.1.0"
authors = ["David Gherghita <davidgherghita@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the SPS30 particulate matter sensor"
readme = "README.md"
keywords = ["sensor", "driver", "i2c", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/david-gherghita/sps30-i2c-rs"
documentation = "https://docs.rs/sps30-i2c"
edition = "2021"

[badges]
travis-ci = { repository = "david-gherghita/sps30-i2c-rs", branch = "master" }

[dependencies]
embedded-hal = "1.0"
embedded-hal-async = "1.0"
byteorder = { version = "1", default-features = false }
maybe-async = "0.2"

[dev-dependencies]
linux-embedded-hal = "0.4"
embedded-hal-mock = { version = "0.11", features = ["embedded-hal-async"] }
async-std = { version = "1.13", features = ["attributes"] }

[features]
default = ["sync"]
sync = ["maybe-async/is_sync"]

[[example]]
name = "linux"
required-features = ["sync"]
